fix new Integer/Long deprecations